Basic rails and ground

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <script src="./gl-matrix.js"></script>
 
   <script src="./cubeprime.js"></script>
+  <!-- Additional objects -->
+  <script src="./ground.js"></script>
+  <script src="./rail.js"></script>
+
   <script src="./main.js"></script>
-</html>
 
-
-  <script src="./cube.js"></script>
 </html>
