--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   <script src="./cubeprime.js"></script>
   <!-- Additional objects -->
   <script src="./ground.js"></script>
+  <script src="./overheadLine.js"></script>
   <script src="./rail.js"></script>
+  <script src="./train.js"></script>
+  <script src="./wall.js"></script>
+
+  <script src="./engine.js"></script>
 
   <script src="./main.js"></script>
 
