--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="./overheadLine.js"></script>
   <script src="./rail.js"></script>
   <script src="./train.js"></script>
+  <script src="./miner.js"></script>
   <script src="./wall.js"></script>
 
   <script src="./engine.js"></script>
