Added more objects

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <script src="./train.js"></script>
   <script src="./miner.js"></script>
   <script src="./wall.js"></script>
+  <script src="./barricade.js"></script>
+  <script src="./hording.js"></script>
+  <script src="./bushes.js"></script>
+  <script src="./coin.js"></script>
 
   <script src="./engine.js"></script>
 
