Basic collision logic

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   </head>
 
   <body>
+    <h1>Score</h1> 
+    <h1 id="score"></h1>
     <canvas id="glcanvas" width="1280" height="720"></canvas>
   </body>
   <script src="./gl-matrix.js"></script>
 
   <script src="./cubeprime.js"></script>
+
   <!-- Additional objects -->
   <script src="./ground.js"></script>
   <script src="./overheadLine.js"></script>
