--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Score</h1> 
+    <h1>Score</h1>
     <h1 id="score"></h1>
     <canvas id="glcanvas" width="1280" height="720"></canvas>
   </body>
@@ -25,6 +25,8 @@
   <script src="./barricade.js"></script>
   <script src="./hording.js"></script>
   <script src="./bushes.js"></script>
+  <script src="./boot.js"></script>
+  <script src="./jetpack.js"></script>
   <script src="./coin.js"></script>
 
   <script src="./engine.js"></script>
