--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="./bushes.js"></script>
   <script src="./boot.js"></script>
   <script src="./jetpack.js"></script>
+  <script src="./police.js"></script>
   <script src="./coin.js"></script>
 
   <script src="./engine.js"></script>
