--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <h1 id="score"></h1>
     <canvas id="glcanvas" width="1280" height="720"></canvas>
   </body>
+
+  <audio controls>
+     <source src="soundtrack.mp3" type="audio/mpeg">
+ </audio>
   <script src="./gl-matrix.js"></script>
 
   <script src="./cubeprime.js"></script>
