--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>WebGL Demo</title>
+    <title>Subway Surfers Dhanbad</title>
     <link rel="stylesheet" href="../webgl.css" type="text/css">
   </head>
 
@@ -12,9 +12,10 @@
     <canvas id="glcanvas" width="1280" height="720"></canvas>
   </body>
 
-  <audio controls>
+  <audio controls autoplay>
      <source src="soundtrack.mp3" type="audio/mpeg">
  </audio>
+
   <script src="./gl-matrix.js"></script>
 
   <script src="./cubeprime.js"></script>
@@ -32,6 +33,7 @@
   <script src="./boot.js"></script>
   <script src="./jetpack.js"></script>
   <script src="./police.js"></script>
+  <script src="./dog.js"></script>
   <script src="./coin.js"></script>
 
   <script src="./engine.js"></script>
